# cancer-prediction

./: README.md  pyproject.toml
knn/: pyproject.toml
notebooks/: global.ipynb  knn.ipynb  logistic-regression.ipynb  logistical-regression.ipynb
notebooks/.ipynb_checkpoints/: global-checkpoint.ipynb  knn-checkpoint.ipynb  logistic-regression-checkpoint.ipynb  logistical-regression-checkpoint.ipynb
