[tool.poetry]
name = "cancer-prediction"
version = "0.1.0"
description = ""
authors = ["Yachim <jachym.kohout@gmail.com>"]
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
